mule-user-guide/v/3.6/set-payload-transformer-reference.adoc
= 设置有效负载变换器参考
:keywords: anypoint studio, esb, set payload, payload

这个变压器将有效负载设置为您定义的任有效负载可以是文字字符串或 link:/mule-user-guide/v/3.6/mule-expression-language-mel[骡子表达]。

== 配置

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:set_payload.png[set_payload]

[%header,cols="4*"]
|===
|Field |Value |Description |XML
|Display Name |Set Payload |Customize to display a unique name for the transformer in your application. a|`doc:name="Set Payload"`
|Value |String or Mule Expression |Enter a literal string or a Mule expression that defines how Mule should set the payload. a|`value="#['Hello, ' + message.payload]"`
|===
....
[tab,title=XML "Editor or Standalone"]
....

[source, xml, linenums]
----
# Example setting a payload to a literal string.
 
<set-payload value="MyNewPayload" doc:name="Set Payload"/>
 
# Example setting a payload using a Mule expression. This takes the current payload and transformes it by adding the string "Hello, " in front of it. Thus, if your payload was "Charlie", this set-payload transformer changes it to "Hello, Charlie".
 
<set-payload value="#['Hello, ' + message.payload]" doc:name="Set Payload"/>
----

[%header%autowidth.spread]
|===
|Element |Description
|*set-payload* |Set a payload on your message (as shown in examples above).
|===

[%header,cols="2*"]
|===
|Element Attribute |Description
|*value* |The literal string or Mule expression that defines how Mule should set the payload.
|*doc:name* a|
Customize to display a unique name for the transformer in your application.

Note: Attribute not required in Mule Standalone configuration.
|===
....
------

== 示例

在此示例中，Set Payload转换器将有效负载设置为包含当天日期的"Hello, World"消息（使用Mule表达式进行检索）。

[tabs]
------
[tab,title="STUDIO Visual Editor"]
....
image:set+payload+flow.png[set+payload+flow]

image:set+payload.png[set+payload]
....
[tab,title="XML Editor or Standalone"]
....

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
 
<mule xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation" xmlns:spring="http://www.springframework.org/schema/beans" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
 
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
 
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd">
 
    <http:listener-config name="listener-config" host="localhost" port="8081" doc:name="HTTP Listener Configuration"/>
    <flow name="HelloFlow1" doc:name="HelloFlow1">
        <http:listener config-ref="listener-config" path="/" doc:name="HTTP Connector"/>
        <set-payload value="#['Hello, World!' + ' Today is ' + server.dateTime.format('dd/MM/yy')]" doc:name="Set Payload"/>
    </flow>
</mule>
----
....
------
== 另请参阅

*  link:/mule-user-guide/v/3.6/transformers[其他变压器]
