mule-user-guide/v/3.8/set-payload-transformer-reference.adoc
= 设置有效负载变换器参考
:keywords: anypoint studio, mule, set payload, payload

这个变压器将有效负载设置为您定义的任有效负载可以是文字字符串或 link:/mule-user-guide/v/3.8/mule-expression-language-mel[骡子表达]。

== 配置

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:set_payload.png[set_payload]

[%header,cols="10a,90a"]
|===
|Field |Description
|Display Name |Customize to display a unique name for the transformer in your application.

*Value:* Set Payload +
*XML:* `doc:name="Set Payload"`
|Value |Enter a literal string or a Mule expression that defines how Mule should set the payload.

*Value:* String or Mule Expression +
*XML:* `value="#['Hello, ' + message.payload]"`
|===
....
[tab,title=XML "Editor or Standalone"]
....

[source, xml, linenums]
----
# Example setting a payload to a literal string.
 
<set-payload value="MyNewPayload" doc:name="Set Payload"/>
 
# Example setting a payload using a Mule expression. This takes the current payload and transforms it by adding the string "Hello " in front of it. Thus, if your payload was "Charlie", this set-payload transformer changes it to "Hello, Charlie".
 
<set-payload value="#['Hello, ' + message.payload]" doc:name="Set Payload"/>
----

[%header%autowidth.spread]
|===
|Element |Description
|*set-payload* |Set a payload on your message (as shown in examples above).
|===

[%header,cols="2*"]
|===
|Element Attribute |Description
|*value* |The literal string or Mule expression that defines how Mule should set the payload.
|*doc:name* a|
Customize to display a unique name for the transformer in your application.

Note: Attribute not required in Mule Standalone configuration.
|===
....
------

== 示例

在此示例中，Set Payload转换器将有效负载设置为包含当天日期的"Hello, World"消息（使用Mule表达式进行检索）。

[tabs]
------
[tab,title="Studio Visual Editor"]
....

image:set+payload+flow.png[set+payload+flow]

The following example sets the Set Payload to: +
`#['Hello World!' + ' Today is ' + server.dateTime.format('dd/MM/yy')]`

This displays: "Hello World! Today is <today's date>"

....
[tab,title="XML Editor or Standalone"]
....

[source, xml, linenums]
----
include::_sources/set-payload-transformer-reference.xml[]
----
....
------
== 另请参阅

*  link:/anypoint-exchange[Anypoint Exchange]。
*  link:/mule-user-guide/v/3.8/transformers[其他变形金刚]




